2010-09-18  Tijl Coosemans <tijl@coosemans.org>

	* config/i386/freebsd.h (SUBTARGET32_DEFAULT_CPU): Add.

2010-09-18  Kai Tietz  <kai.tietz@onevision.com>

	* config.gcc (*-w64-mingw*): Correct typo about t-dfprules.

2010-09-18  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/45709
	* tree-inline.c (copy_phis_for_bb): Fixup new_edge when
	we splitted it.

2010-09-17  Sebastian Pop  <sebastian.pop@amd.com>

	* graphite-dependences.c (dot_deps): Add DEBUG_FUNCTION.
	(dot_deps_stmt): Same.
	* graphite-poly.c (dot_lst): Same.
	* graphite-scop-detection.c (dot_all_scops): Same.
	(dot_scop): Same.

2010-09-17  Sebastian Pop  <sebastian.pop@amd.com>

	Revert commit: 2009-12-16  Ben Elliston  <bje@au.ibm.com>
	* tree-data-ref.c (dot_rdg_1): Added back.
	(dot_rdg): Same.  Added "#if 0" around system call.

2010-09-17  H.J. Lu  <hongjiu.lu@intel.com>
	    Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (initial_ix86_tune_features): Add
	X86_TUNE_PAD_SHORT_FUNCTION.
	(ix86_code_end): Pad with 8 NOPs for TARGET_PAD_SHORT_FUNCTION.
	(ix86_count_insn): New.
	(ix86_pad_short_function): Likewise.
	(ix86_reorg): Support TARGET_PAD_SHORT_FUNCTION.

	* config/i386/i386.h (ix86_tune_indices): Add
	X86_TUNE_PAD_SHORT_FUNCTION.
	(TARGET_PAD_SHORT_FUNCTION): New.

	* config/i386/i386.md (UNSPEC_NOPS): New.
	(nops): Likewise.

2010-09-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR middle-end/45234
	* calls.c (expand_call): Make sure that all variable sized
	adjustments are multiple of preferred stack boundary after
	stack alignment.

2010-09-17  DJ Delorie  <dj@redhat.com>

	* config/rx/rx.c (rx_print_operand): If __builtin_rx_setpsw() is
	passed an invalid value, print an error instead of ICEing.
	(valid_psw_flag): New.
	(rx_expand_builtin): Call it for setpsw/clrpsw.
	(rx_expand_builtin_mvtipl): Pass an integer to IN_RANGE, not an
	RTX.

	* config/rx/rx.md (bitclr): Don't mark the output as early-clobber.
	(bitclr_in_memory): Likewise.